# notifyforge

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  worklog.md
.github/workflows/: ci.yml
.state/: master-key.json
db/: custom.db
deploy/docker/: Dockerfile  docker-compose.yml
deploy/docker/clickhouse/: init.sql
deploy/docker/prometheus/: prometheus.yml
deploy/helm/notifyforge/: Chart.yaml  values.yaml
deploy/k8s/: manifests.yaml
docs/: ARCHITECTURE.md
mini-services/realtime-service/: index.ts  package.json
prisma/: schema.prisma
scripts/: bootstrap.ts
sdk/: README.md
sdk/flutter/lib/: notifyforge.dart
sdk/go/: notifyforge.go
sdk/php/src/: NotifyForge.php
sdk/python/notifyforge/: __init__.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: index.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/dashboard/: badges.tsx
src/lib/: batch.ts  dashboard-api.ts  dashboard-context.ts  ingest.ts  provider-health.ts  template-engine.ts  types.ts
src/lib/channels/: desktop.ts  email.ts  inapp.ts  index.ts  push-android.ts  push-huawei.ts  push-ios.ts  registry.ts  sms.ts  webhook.ts  webpush.ts  worker.ts
src/lib/infra/: api.ts  audit.ts  auth.ts  crypto.ts  guard.ts  logger.ts  queue.ts  rate-limit.ts
src/lib/providers/: apns.ts  fcm.ts  huawei.ts  index.ts  sendgrid.ts  twilio.ts  webpush.ts
tool-results/: bash_1783026165886_472162c3d48b.txt  bash_1783026180543_e3ca6d92d842.txt  bash_1783026225943_475e3c48d155.txt
(+74 files in other folders)
