[package]
name = "notifyforge"
version = "1.0.0"
edition = "2021"
description = "Official NotifyForge Rust SDK — channel-isolated notification infrastructure"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
